--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.49.0",
-    "eslint-config-next": "14.1.0",
-    "postcss": "8.4.24",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.49.0",
+    "eslint-config-next": "^14.1.0",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.3"
   }
 }
