--- a/package.json
+++ b/package.json
@@ -5,27 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "15.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "uuid": "^9.0.0"
+    "next": "^15.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20.4.2",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.49.0",
-    "eslint-config-next": "^14.1.0",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3"
+    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.21",
+    "autoprefixer": "^10.4.13"
   }
 }
-
-
-
